holyc-parser/tests/corpus/passing/097-stmt-stmt-break.hc
U0 SE_brk() { while (1) break; }
